but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General
    Public License along with TR log for linux.  If not, see
<http://www.gnu.org/licenses/>.

0.50
- Added check for Band and Mode out of range in multi info message

0.49
- Added "WRTC 2018" contest
- Deleted "WRTC 2002" contest
- Added UDP score reporting URL for WRTC2018
- Worked on improved Alt-D multiplier display.
- Fixed bug where CQ on radio 2 overwrote bandmap
- Fixed bug where only the first parallel port was found.
- When DVKRadio enabled, send stop dvk whenenver alt-r changes rig

0.48
- Online score reporting added. All options must be manually configured.

0.47 
- Added latch mode for yccc so2r box.
- Added DVK radio commands to access rig's voice keyer as a DVK

0.46
- Changed postcab to write CABNAME.DAT to $HOME/.trlog if it isn't already
somewhere else that the program can find.

0.45
- Removed test for short names in TRMASTER.DTA
- Forced autospace off in YCCC box. Complain if you want this to be a
LOGCFG.DAT parameter.

0.44
- Fixed problem with DVK CONTROL KEY RECORD which continued to play F keys
rather than control keys.

0.43
- Added DVK CONTROL KEY RECORD as a LOGCFG.DAT command. Default is true.
Setting this to false makes the control keys act normally with a DVK
rather than triggering record on the corresponding not control key memories.
It can be set from the control-j menu.
- Fixed bug where, with the DVK/DVP, when a alt-d call is waiting, hitting the
space bar did not abort the cq in progress.

0.43
- Changed default LogFrequencyEnable to true for CQWW and Russian DX,
  so that exact frequencies (to 1KHz) will be logged by default as now
  required for competitive entries. For other contests the default
  remains false.
- Changed the rig control so that it will be easier to add new rigs