@@ -18,6 +18,13 @@ You should have received a copy of the GNU General
 
 0.50
 - Added check for Band and Mode out of range in multi info message
+- Added checks for ncat, /bin/bash, and rigctld to halt program if
+  they are requested but aren't installed in the path.
+- Made winkeyer and yccc box cw word space 6 dits in agreement with
+  TR DOS serial and parallel port keying.
+- '^' character gives 4.5 dit space for TR DOS serial and parallel port keying.
+  Made winkeyer '^' give same 4.5 dit space, YCCC box doesn't have 1/2 dit
+  space, so '^' gives a 5 dit space.
 
 0.49
 - Added "WRTC 2018" contest
